Update: fixed padding % to px for column-gap to work when under flex-wrap: condition. small fixes for the subscription box. git push

--- a/2-landing-page/style.css
+++ b/2-landing-page/style.css
@@ -15,6 +15,7 @@ b{
 
 iframe{
     display: flex;
+    flex-grow: 1;
     min-height: 352px;
     height: 100%;
 }
@@ -47,7 +48,7 @@ button:hover{
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    padding: 1% 15%;
+    padding: 20px 300px;
 }
 
 ul{
@@ -68,18 +69,19 @@ a{
 /* SECOND BOX */
 
 .intro{
-    padding: 50px 15%;
+    padding: 50px 300px;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
     flex-wrap: wrap;
-    gap: 2%;
+    gap: 20px;
 }
 
 .intro .content{
     display: flex;
     flex-direction: column;
-    flex-basis: auto;
+    flex-basis: 0;
+    flex-grow: 1;
     gap: 30px;
 }
 
@@ -100,14 +102,18 @@ a{
 }
 
 .featured-playlist{
-    flex-basis: 30%;
+    display: flex;
+    flex-basis: 0;
     flex-grow: 1;
 }
 
 .previous-featured{
     display: flex;
     flex-direction: column;
-    gap: 30px;
+    justify-content: space-between;
+    flex-basis: 0;
+    flex-grow: 1;
+    gap: 10px;
 }
 
 .previous-title{
@@ -119,7 +125,7 @@ a{
 .playlists{
     display: flex;
     flex-direction: column;
-    padding: 50px 15%;
+    padding: 50px 300px;
     gap: 50px;
 }
 
@@ -151,7 +157,7 @@ a{
 /* FOURTH BOX */
 .quote-container{
     background: #E5E7EB;
-    padding: 50px 15%;
+    padding: 50px 300px;
     display: flex;
     flex-direction: column;
     justify-items: center;
@@ -171,8 +177,9 @@ a{
     display: flex;
     flex-direction: column;
     justify-content: center;
+    align-items: center;
     background: white;
-    padding: 50px 30%;
+    padding: 50px 300px;
 }
 .container-2{
     display: flex;
@@ -183,6 +190,7 @@ a{
     background-color: #3882F6;
     border-radius: 12px;
     flex-wrap: wrap;
+    flex: 0 1 0;
 } 
 .subs-left{
     display: flex;
